--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,19 @@
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Home",   root_path %></li>
             <li><%= link_to "Help",   help_path %></li>
-            <li><%= link_to "Log in", login_path %></li>
+            <% if logged_in? %>
+              <li><%= link_to "Users", '#' %></li>
+              <li class="dropdown">
+              <p class="account">Account</p>
+                <ul class="dropdown-content">
+                  <li><%= link_to "Profile", current_user, style: 'color: #999999' %></li>
+                  <li><%= link_to "Settings", "#" , style: 'color: #999999'%></li>
+                  <li><%= link_to "log_out", login_path, method: :delete, style: 'color: #999999' %></li>
+                </ul>
+              </li>
+            <% else %>
+              <li><%= link_to "Log in", login_path %></li>
+            <% end %>
           </ul>
         </nav>
       </div>
