log in auto after sign up and some tests for login and improve sign up test

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,9 @@
       <h1>
         <%= gravatar_for @user %>
         <%= @user.name %>
+        <br>
+        logged_in? - <%= logged_in? %> <br>
+        current_user  - <%= current_user %>
       </h1>
     </section>
   </aside>
