--- a/app/views/shared/_user_form.html.erb
+++ b/app/views/shared/_user_form.html.erb
@@ -1,5 +1,5 @@
 
-    <%= form_with(model: @user, local: true) do |f| %>
+    <%= form_with(model: @user) do |f| %>
       <%= render 'shared/error_messages' %>
       <%= f.label :name %>
       <%= f.text_field :name, class: 'form-control' %>
@@ -9,7 +9,5 @@
       <%= f.password_field :password, class: 'form-control' %>
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
+      <%= f.submit yield(:button_tag), class: "btn btn-primary" %>
     <% end %>
-  </div>
-</div>
