--- a/app/views/user_mailer/account_activation.text.erb
+++ b/app/views/user_mailer/account_activation.text.erb
@@ -1,3 +1,3 @@
-Hi <%= @user.name %> !
-<%= link_to "Activate your account", edit_account_activation_url(@user.activation_token,
-                                                                 email: @user.email) %>       
+Hi <%= @user.name %>,
+Click on the link below to activate your account:
+<%= edit_account_activation_url(@user.activation_token, email: @user.email) %>
