--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,8 +1,8 @@
 
 <p>  Hi <%= @user.name %>, to reset you password pls click on link</p>
-  <%= link_to "Reset password", edit_password_resets_url(@user.reset_token,
-                                                         email: @user.email) %>
 
+  <%= link_to "Reset password", edit_password_reset_url(@user.reset_token,
+                                                         email: @user.email) %>
 <p>This link will expire in two hours.</p>
 <p>
   If you did not request your password to be reset, please ignore this email and
