--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,4 +9,14 @@
       </h1>
     </section>
   </aside>
+  <div class="col-md-8">
+    <% if @user.microposts.any? %>
+      <h3>Microposts <%= @user.microposts.count %></h3>
+      <ol class="microposts">
+        <%= render @microposts %>
+      </ol>
+    <% else %>
+      <h3>User dont have microposts yet</h3>
+    <% end %>
+  </div>
 </div>
