--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,16 +4,16 @@
     <section class="user_info">
       <h1>
         <%= gravatar_for @user %>
-        <%= @user.name %> <br>
-        <%= @user.email %>
+        <%= @user.name %>
       </h1>
     </section>
   </aside>
   <div class="col-md-8">
     <% if @user.microposts.any? %>
-      <h3>Microposts <%= @user.microposts.count %></h3>
+      <h3>Microposts (<%= @user.microposts.count %>)</h3>
       <ol class="microposts">
         <%= render @microposts %>
+        <%= will_paginate @microposts %>
       </ol>
     <% else %>
       <h3>User dont have microposts yet</h3>
