add create micropsts to home page

--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -15,3 +15,10 @@
     <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
   </div>
 <% end %>
+<% if @feed_items && @feed_items.any? %>
+  <ol class="microposts">
+    <%= render @feed_items %>
+  </ol>
+  <%= will_paginate @feed_items %>
+<% end %>
+
