--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -1,25 +1,32 @@
 <% if logged_in? %>
   <div class="row">
-    <aside class="col-md-4">
+    <div class="col-md-4 aside">
       <section class="user_info">
         <%= render 'shared/user_info' %>
+      </section>
+      <section class="stats">
+        <%= render 'shared/stats' %>
       </section>
       <section class="micropost_form">
         <%= render 'shared/micropost_form' %>
       </section>
-    </aside>
+    </div>
+    <div>
+      <% if @feed_items && @feed_items.any? %>
+        <ol class="microposts">
+          <%= render @feed_items %>
+        </ol>
+        <%= will_paginate @feed_items,
+                          params: { controller: :static_page, action: :home } %>
+      <% end %>
+    </div>
   </div>
+
 <% else %>
   <div class="center jumbotron">
     <h1>Welcome to the Sample App</h1>
     <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
   </div>
 <% end %>
-<% if @feed_items && @feed_items.any? %>
-  <ol class="microposts">
-    <%= render @feed_items %>
-  </ol>
-  <%= will_paginate @feed_items,
-                    params: { controller: :static_page, action: :home } %>
-<% end %>
+
 
